tests/misc/config/cfg_syntax/tcfg_closingtokenerr.nim
discard """
  description: "tests config parsing error, see corresponding '.nim.cfg' file"
  errormsg: "expected closing ']'"
  file: "tcfg_closingtokenerr.nim.cfg"
"""